web-ui/src/main/webapp/app/css/custom.css
/* ... */
.attachment.vdx .attachment-img,
.attachment.vsd .attachment-img,
.attachment.vsl .attachment-img,
.attachment.vss .attachment-img,
.attachment.vst .attachment-img,
.attachment.vsu .attachment-img,
.attachment.vsw .attachment-img,
.attachment.vsx .attachment-img,
.attachment.vtx .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -319px;
}

.attachment.pub .attachment-img,
.attachment.mpp .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -357px;
}

.attachment.adn .attachment-img,
.attachment.accdb .attachment-img,
.attachment.accdr .attachment-img,
.attachment.accdt .attachment-img,
.attachment.mdb .attachment-img,
.attachment.mdn .attachment-img,
.attachment.mdf .attachment-img,
.attachment.accde .attachment-img,
.attachment.ldb .attachment-img,
.attachment.laccdb .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -395px;
}

.attachment.png .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -585px;
}

.attachment.jpg .attachment-img,
.attachment.jpeg .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -471px;
}

.attachment.gif .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -509px;
}

.attachment.gsm .attachment-img,
.attachment.wav .attachment-img,
.attachment.mp3 .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -623px;
}

.attachment.eml .attachment-img,
.attachment.msg .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -661px;
}

.attachment.mov .attachment-img,
.attachment.mp4 .attachment-img,
.attachment.mpeg .attachment-img,
.attachment.avi .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -699px;
}

.attachment.zip .attachment-img,
.attachment.rar .attachment-img,
.attachment.cab .attachment-img,
.attachment.arj .attachment-img,
.attachment.lzh .attachment-img,
.attachment.tar .attachment-img,
.attachment.gz .attachment-img,
.attachment.bz2 .attachment-img,
.attachment.ace .attachment-img,
.attachment.jar .attachment-img,
.attachment.ext-7z .attachment-img,
.attachment.xz .attachment-img,
.attachment.ext-z .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -433px;
}

.attachment.tif .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -585px;
}

.attachment.xls .attachment-img,
.attachment.xlt .attachment-img,
.attachment.xlm .attachment-img,
.attachment.xlsm .attachment-img,
.attachment.xltx .attachment-img,
.attachment.xltm .attachment-img,
.attachment.xlsb .attachment-img,
.attachment.xla .attachment-img,
.attachment.xlam .attachment-img,
.attachment.xll .attachment-img,
.attachment.xlw .attachment-img,
.attachment.xlsx .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -167px;
}

.attachment.doc .attachment-img,
.attachment.dot .attachment-img,
.attachment.docm .attachment-img,
.attachment.dotx .attachment-img,
.attachment.dotm .attachment-img,
.attachment.docx .attachment-img {
	background:url(../img/sprites/ImageSprite.png) -760px -243px;
}

.attachments .attachment {
	background-color: #fff;
	min-height: 53px;
	padding: 7px 0px 2px;
}

.attachments-minimal .attachments .attachment {
	min-height: 36px;
	height: 36px;
	padding: 0px;
	border: 0px;
	margin-bottom: 5px;
	margin-top: 5px;
}

.attachments-minimal .attachment-text {
	line-height: 33px;
}

.attachments .attachment.last {
	border: 0px;
}

.matches {
	margin-top: 20px;
}

body ul {
	list-style: none;
	margin: 0px;
}

/* msglist */
.msglist {
	position: relative;
	width: 100%;
	height: 100%;
	margin: 0px;
}

.msglist .listing .jspVerticalBar {
	bottom: 0px;
	height: auto;
	top: 3px;
}

.msglist.docked .sidebar-left {
	min-width: 0px;
	width: 25px !important;
}

.msglist.docked .filter-list {
	display: none;
}

.msglist.docked .message-list-container {
	margin-left: 25px !important;
}

.msglist .message-list-container {
	position: absolute;
	right: 3px;
	width: auto !important;
	margin-left: 236px;
	padding-top: 10px;
	top: 0px;
	bottom: 107px;
	left: 0px;
}

.msglist .message-list-container .jspContainer {
	width: 100% !important;
	height: 100% !important;
}

.msglist .message-list-container .jspPane {
	left: 0px !important;
	right: 22px !important;
	width: auto !important;
/*	width: 100% !important; */
}

/* jScrollPane */
.jspScrollable:focus {
	outline-color: transparent !important;
}

.jspPane {
	padding-top: 0px !important;
}

.jspTrack {
	position: absolute;
	height: auto !important;
	top: 0px;
	bottom: 16px;
	width: 100%;
	background: transparent !important;
}

.jspVerticalBar {
	background: url(../img/sprites/scrollbar_middle.png) repeat-y !important;
	width: 16px !important;
}

.jspHorizontalBar {
	background: url(../img/sprites/scrollbar_middle_horiz.png) repeat-x !important;
	height: 10px !important;
}

.jspDrag {
	background-color: #fff !important;
	border: 1px solid #CBCBCB;
}

.jspArrow {
	border: 1px solid #cbcbcb;
}

.jspArrowUp {
	background: url(../img/sprites/ImageSprite.png) -81px -48px !important;
}

.jspArrowUp.disabled {
	background: url(../img/sprites/ImageSprite.png) -81px -32px !important;
}


.jspArrowDown {
	bottom: 0px;
	position: absolute;
	width: 100%;
	background: url(../img/sprites/ImageSprite.png) -65px -48px !important;
}

.jspArrowDown.disabled {
	background: url(../img/sprites/ImageSprite.png) -65px -32px !important;
}


/* results */
.results {
	margin: 0px 16px 31px 0px;
	position: relative;
	float: left;
	font-size: 11px;
	width: 100%;
}

.results .jspContainer {
	right: -1px;
}

.results .result {
	background-color: #fff;
	padding: 0px;
	cursor: pointer;
	color: #333;
}

.results .result:hover {
	background-color: #f6faff;
}

.results .result.active-multi {
	background-color: #e7eff9;
}

.results .result.active-single {
	background-color: #e7eff9;
}

.results .result.active-single .widget-main,
.results .result.active-multi .widget-main {
	color: #999;
	line-height: 14px;
}
/* ... */

